crates/axiom-typeck/tests/fixtures/errors/bin_op_mismatch.ax
fn main() { val x = true + 1 }
